--- a/Size Classes/Base.lproj/Main.storyboard
+++ b/Size Classes/Base.lproj/Main.storyboard
@@ -1,7 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13122.16" systemVersion="17A277" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="ipad12_9" orientation="landscape">
+        <adaptation id="splitview1_2"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.12"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
+        <capability name="Alignment constraints to the first baseline" minToolsVersion="6.0"/>
+        <capability name="Baseline standard spacing" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -9,12 +15,110 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Size_Classes" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <rect key="frame" x="0.0" y="0.0" width="678" height="1024"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Any Size" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlT-Kk-IiR">
+                                <rect key="frame" x="306" y="501.5" width="66" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Regular width" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="h7Z-hK-mQc">
+                                <rect key="frame" x="286.5" y="526" width="105" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Regular Height" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Gp2-M6-vaO">
+                                <rect key="frame" x="282" y="472" width="114" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compact Width" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WUc-wh-Bgd">
+                                <rect key="frame" x="259.5" y="703.5" width="120" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Compact Height" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vUr-EU-JPu">
+                                <rect key="frame" x="177" y="120.5" width="126" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="tlT-Kk-IiR" firstAttribute="top" secondItem="vUr-EU-JPu" secondAttribute="bottom" constant="8" id="0aR-Ah-BFD"/>
+                            <constraint firstItem="tlT-Kk-IiR" firstAttribute="top" secondItem="Gp2-M6-vaO" secondAttribute="bottom" constant="8.5" id="3N9-xn-AxD"/>
+                            <constraint firstItem="h7Z-hK-mQc" firstAttribute="firstBaseline" secondItem="tlT-Kk-IiR" secondAttribute="baseline" constant="24" symbolType="layoutAnchor" id="4Ot-0u-qvW"/>
+                            <constraint firstItem="vUr-EU-JPu" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ELB-Il-3Oo"/>
+                            <constraint firstItem="tlT-Kk-IiR" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="FaK-Mg-iDz"/>
+                            <constraint firstItem="WUc-wh-Bgd" firstAttribute="top" secondItem="tlT-Kk-IiR" secondAttribute="bottom" constant="10" id="PKs-hd-cJz"/>
+                            <constraint firstItem="WUc-wh-Bgd" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="UzL-WC-cZT"/>
+                            <constraint firstItem="Gp2-M6-vaO" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="d17-Ib-ToA"/>
+                            <constraint firstItem="h7Z-hK-mQc" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="q84-vh-dQg"/>
+                            <constraint firstItem="tlT-Kk-IiR" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="wcD-39-GDK"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="h7Z-hK-mQc"/>
+                                <exclude reference="Gp2-M6-vaO"/>
+                                <exclude reference="WUc-wh-Bgd"/>
+                                <exclude reference="vUr-EU-JPu"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="ELB-Il-3Oo"/>
+                                <exclude reference="4Ot-0u-qvW"/>
+                                <exclude reference="q84-vh-dQg"/>
+                                <exclude reference="d17-Ib-ToA"/>
+                                <exclude reference="0aR-Ah-BFD"/>
+                                <exclude reference="3N9-xn-AxD"/>
+                                <exclude reference="PKs-hd-cJz"/>
+                                <exclude reference="UzL-WC-cZT"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact">
+                            <mask key="subviews">
+                                <include reference="vUr-EU-JPu"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="ELB-Il-3Oo"/>
+                                <include reference="0aR-Ah-BFD"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=regular">
+                            <mask key="subviews">
+                                <include reference="Gp2-M6-vaO"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="d17-Ib-ToA"/>
+                                <include reference="3N9-xn-AxD"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=compact">
+                            <mask key="subviews">
+                                <include reference="WUc-wh-Bgd"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="PKs-hd-cJz"/>
+                                <include reference="UzL-WC-cZT"/>
+                            </mask>
+                        </variation>
+                        <variation key="widthClass=regular">
+                            <mask key="subviews">
+                                <include reference="h7Z-hK-mQc"/>
+                            </mask>
+                            <mask key="constraints">
+                                <include reference="4Ot-0u-qvW"/>
+                                <include reference="q84-vh-dQg"/>
+                            </mask>
+                        </variation>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
